add more base files

--- a/main.html
+++ b/main.html
@@ -47,7 +47,9 @@
     </div>
     <div class="twelve columns">
       <h6>
-        Escrow your bitcoins
+        Escrow your bitcoins. To do this you must send us the bitcoin amount you expect to send
+        then we hold it until both parties (you and the recipient) agree the deal has been satisifed.
+        We charge a 1% fee for our services.
       </h6>
     </div>
     <div id="donations-form">
@@ -94,12 +96,4 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
-<!--   <div id = "container">
-    <div id = "content"></div>
-  </div>
-<footer>
-  <h5>Copyright 2016 </h5>
-  </div>
-</footer> -->
-
 </html>
