set up server and client

--- a/main.html
+++ b/main.html
@@ -75,13 +75,19 @@
         <p>
           Please enter the merchants bitcoin address
         </p>
-        <input id="charityAddress" type ="text" name="charity_Address">
+        <input id="merchantAddr" type ="text" name="merchantAddr">
       </div>
       <div id="inputForm">
         <p>
           Please enter your email address
         </p>
         <input id="emailAddress" type ="text" name="email_Address">
+      </div>
+      <div id="inputForm">
+        <p>
+          Please enter your recipient's email address
+        </p>
+        <input id="recipientEmail" type ="text" name="recipientEmail">
       </div>
       <button id="button" type="button">Submit</button>
     </div>
