refactor and fix bugs

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 
 <body>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="./js/bundle.js"></script>
+  <script src="./js/bundle.min.js"></script>
   <script src="https://www.promisejs.org/polyfills/promise-6.1.0.js"></script>
 
   <!-- Primary Page Layout
@@ -89,7 +89,7 @@
         </p>
         <input id="recipientEmail" type ="text" name="recipientEmail">
       </div>
-      <button id="button" type="button">Submit</button>
+      <button id="submit" type="submit">Submit</button>
     </div>
   </div>
 <!-- page links -->
