add donation page

--- a/donate.html
+++ b/donate.html
@@ -47,50 +47,13 @@
     </div>
     <div class="twelve columns">
       <h6>
-        Escrow your bitcoins. To do this you must send us the bitcoin amount you expect to send
-        then we hold it until both parties (you and the recipient) agree the deal has been satisifed.
-        We do not charge for this service but if you would like to make a donation please click the donate
-        button on the toolbar
+        If you like this service then please send us a bitcoin donation with the address below, Thank you!
       </h6>
     </div>
     <div id="donations-form">
-      <div id="inputForm">
-        <p>
-          Please enter your bitcoin address
-        </p>
-        <input id="address" type ="text" name="_address">
-      </div>
-      <div id="inputForm">
-        <p>
-          Please sign with this address with the message "bitscrow" and paste below
-        </p>
-        <input id="Signature" type ="text" name="_Signature">
-      </div>
-      <div id="inputForm">
-        <p>
-          Please paste the tx id of the transaction sent to us
-        </p>
-        <input id="TxId" type ="text" name="_TxId">
-      </div>
-      <div id="inputForm">
-        <p>
-          Please enter the merchants bitcoin address
-        </p>
-        <input id="merchantAddr" type ="text" name="merchantAddr">
-      </div>
-      <div id="inputForm">
-        <p>
-          Please enter your email address
-        </p>
-        <input id="emailAddress" type ="text" name="email_Address">
-      </div>
-      <div id="inputForm">
-        <p>
-          Please enter your recipient's email address
-        </p>
-        <input id="recipientEmail" type ="text" name="recipientEmail">
-      </div>
-      <button id="submit" type="submit">Submit</button>
+      <p> Our Bitcoin address is: 1HhZVRtuTdfvfVFy5t3dGuindGUUFuRQUP </p>
+      <br>
+      <img src="./qr" alt="bitcoin qr code">
     </div>
   </div>
 <!-- page links -->
